--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    background-color: var(--secondaryColor);
 }
 
 a {
@@ -33,8 +34,9 @@ h4 {
 
 .title {
     font-size: 24px;
-    font-weight: 500;
+    font-weight: 800;
     line-height: 36px;
+    margin: 0 0 25px 0;
     color: var(--themeColor);
 }
 
@@ -218,4 +220,41 @@ header {
     .navbar .chk-btn img {
         display: block;
     }
+}
+
+
+/*---------------------------\
+      Top Section Start
+\---------------------------*/
+.topSection {
+    padding: 30px;
+    margin-top: 50px;
+    border-radius: 8px;
+    background-color: var(--white);
+}
+
+/*---------------------------\
+      Top Players Start
+\---------------------------*/
+.top-players .players {
+    display: grid;
+    grid-row-gap: 30px;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.top-players .player {
+    display: flex;
+    align-items: center;
+}
+
+.top-players .player img {
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+    border: 3px solid var(--themeColor);
+}
+
+.top-players .player span {
+    margin-left: 15px;
+    display: inline-block;
 }
