--- a/assets/style.css
+++ b/assets/style.css
@@ -258,3 +258,18 @@ header {
     margin-left: 15px;
     display: inline-block;
 }
+
+/* Responsive Top Players */
+@media only screen and (max-width: 767px) {
+    .top-players .players {
+        grid-row-gap: 30px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .top-players .players {
+        grid-row-gap: 20px;
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
