--- a/assets/style.css
+++ b/assets/style.css
@@ -426,6 +426,10 @@ header {
         grid-row-gap: 20px;
         grid-template-columns: repeat(1, 1fr);
     }
+    
+    .latesCourse h3 {
+        letter-spacing: 0px;
+    }
 
     .course .latesCourse {
         width: auto;
