--- a/assets/style.css
+++ b/assets/style.css
@@ -86,7 +86,11 @@ h4 {
         Navbar Start
 \---------------------------*/
 header {
+    top: 0;
+    left: 0;
+    right: 0;
     height: 94px;
+    position: fixed;
     background-color: var(--themeColor);
 }
 
@@ -242,9 +246,15 @@ header {
 \---------------------------*/
 .topSection {
     padding: 30px;
-    margin-top: 50px;
+    margin-top: 130px;
     border-radius: 8px;
     background-color: var(--white);
+}
+
+@media only screen and (max-width: 575px) {
+    .topSection {
+        margin-top: 115px;
+    }
 }
 
 /*---------------------------\
